# ChangeLog for app-emacs/whizzytex
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Dec 2008; Ulrich Mueller <ulm@gentoo.org> +files/50whizzytex-gentoo.el,
  +metadata.xml, +whizzytex-1.3.1.ebuild:
  Initial import. Ebuild contributed by me.
