@@ -1,5 +1,25 @@
-AUX 50whizzytex-gentoo.el 137 RMD160 e2032382756bf7ea530cd00932eb18ae82648c2a SHA1 6bc99138353bdd82c89bff5eba08f6bb94299565 SHA256 46e3dcefd51d6f52e7c9b4204f62796a0a93b6d1c7b2dca30720d0b2d3ccd29d
-DIST whizzytex-1.3.1.tgz 755428 RMD160 017cbdfa178216ec5f97ef0a4848813ac35550e1 SHA1 c01e0dc5886631250c786251c009324064dfde97 SHA256 06867c117be046428a91c63361f2be6887111b01fc8a1bac0a0ce8ad86bf46f2
-EBUILD whizzytex-1.3.1.ebuild 1879 RMD160 e5a910affc3e11feebf61237063e7c32948d4775 SHA1 53e6e4a63cece84ab498926c0ad3f53459d0c59f SHA256 b272c5ebcf9c659de31d0e18f6e52693a99a36427b6686e4e800793956736d5e
-MISC ChangeLog 284 RMD160 95d01cc7f00d9093b2480cb53764531c8dd314ce SHA1 e564911f88ead35820ee0231d792c5f1e005083c SHA256 6140661e6ac5fa1a18a32793948d124115309c68998187428e8d3c0edca74913
-MISC metadata.xml 761 RMD160 f8ac2f7539007f041971a484995679e86a9104ce SHA1 58d149866c7c4e0f6006197ad5dd4194b0bf89c2 SHA256 0dee8a0d733c01e400419a96226364746cdf81a58d9b45467d9a7b27e09fbfb1
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX 50whizzytex-gentoo.el 137 SHA256 46e3dcefd51d6f52e7c9b4204f62796a0a93b6d1c7b2dca30720d0b2d3ccd29d SHA512 adb64b4d6b080452ad765266f78576680d6e6fc2edd42e285453ff0d3b1479282a18b91c261f18339217341d9c0918951821e4c97fd5bbc47b74fe6b63da77b5 WHIRLPOOL 435f8106679d7c063d300d2dc06e5dc15bc0b7705fc3f6d4e561105aadd66b48667f2e506329bcd8180c6a96b6af104bccaaedbd7eb047778e2e9d49513b69c0
+DIST whizzytex-1.3.2.tgz 1514496 SHA256 3e5f2729fa5728dffd191d76efb6e2c3b3ac6b92b478eef2c78f928954c9e768 SHA512 92e6f7e024dc17e521c10c323510626ae2afb719c6114236dc6d27a08f6031444180954eb92eac8d020848d631539af9f1162f4ca12c0eee244c8396ba05d1d1 WHIRLPOOL 822dd8c5c6840b1adac55d47cc21583f99bd798960e3b6759915c204c155ab914bccb3b0133414fbf848c1feeb352e8fc2fe80ffa6ca7f7301304f13a61adb44
+EBUILD whizzytex-1.3.2.ebuild 1813 SHA256 6c4fd2256313ef5e6228829ffba95e2e226a96090f97dce2951fdf5ba947a8fc SHA512 b9232ab88c55565d00686ffdc17b800696504a36a7601baec15da60e7682588ce239e0ac5889ac6fb18145fcf10bf79e47d9bf108e5048552e2d4b3cf0dff2d9 WHIRLPOOL 69e9ae730a63a865b86a32fb950cf2dbc00f246888c50ad859ee268652b71709461774522c38b27135d6e47e1c605ade038e718246d8673161065f68417e3915
+MISC ChangeLog 597 SHA256 ecb96f6fc48fa1fe1b52bf24b421bfc1bcb7131d41bf0f27a6571c7d42ba7769 SHA512 8d713a0c62b5a48420edf63cddc0847d00228cbd4ceae32acd48560c98cdaa6295a8527836037dcacbed77fcdb1c2aa92d4ab05b28c5b74a4f814922c351e9c4 WHIRLPOOL 2a651e2b443dd559e018fc62d7ab41c7533b01386354c227ef8534096e33114cf36f4693708b81545c7105104fd391e459ad49a9327d61ca42a1b4332bb061c0
+MISC metadata.xml 761 SHA256 0dee8a0d733c01e400419a96226364746cdf81a58d9b45467d9a7b27e09fbfb1 SHA512 51d3542c3a0bf8e797ad8282dff99231cd0eee8ff07fc6a8043591d17a04e66f185baee478eccf9246734bac2aac9bd4132f3fb8700a37353b85d29b667a9df2 WHIRLPOOL 8518692665cc498956882d249e45ca6a36665c130df8472244762e97fbc88356de15706efbdd9ad5925ba6cb59c651c64f258807b19baa8fa7e4d1fea10e2746
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQcDnPAAoJEDxpGckxwJCBeuMP/0KxjSeYwn9iYouKp31mmeq/
+m0MYk/I68NfYu2sq31zLpxOc0y5/qYW1uPEVajIjV238CSeVulkEPp5ycB2NNA6k
+B0r2F6OLFmNlmvDCk1jwx1L1Y03lwxobQZVpzCyPswNDnbMAbfBcno7pov83vTFq
+67eCE8sGlH1/FsVsA3Imm0eTz5Dyg09bTBALd91f+c/VnS5a7vB1ZVo3ydI4Xx5k
+BzFHoadeHUTfmrt5LZLVVu2SSvIo+zDA+h6UPxyV98uamswco1Em1i/o0nDwoqm1
+6dZEfVQNZBx4/AdWblO2LfRP+1eGvoUqgMgT0zNccTFJDLTQ25Q8RtUo8xX9a6SB
+QzdCfoSzrjp+aJ+K+pRVgb2NNvmEfA9vQOWGcB3Hgu6wLmzRk1hz5AQy09GIcPLU
+lGQ1Uw9XUTZR1J5Z0/zhYWUkhb+RjxrARDT0w1CK3yIaJw2D7t4cyuN1Y65bKljj
+g970OYFRirUZYZd93zo5FC038hT8w6R5oGmD2t4ruFP74hwINC4xWuBbPuybkZXs
+gb6TggUx2UpVQ/Q9jWVk/7A2GwvvATHk+66vpJP5m8y260fYuIdC1kzQyiKTWxiR
+3sy9s5IZOMjxiQPCe17zQp/ThZ3UBrPCd1tEiUoTtGNaeXZRsnE4qgqZKG7QkYrV
+42AKidF39OqbvAERgIBO
+=Mw4L
+-----END PGP SIGNATURE-----
