@@ -1,6 +1,8 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
+
+EAPI=4
 
 inherit elisp
 
@@ -8,7 +10,7 @@ DESCRIPTION="An Emacs minor mode for incremental viewing of LaTeX documents"
 HOMEPAGE="http://cristal.inria.fr/whizzytex/"
 SRC_URI="http://cristal.inria.fr/${PN}/${P}.tgz"
 
-LICENSE="GPL-2"
+LICENSE="GPL-2+"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="advi xdvi gv doc examples"
@@ -23,48 +25,55 @@ RDEPEND="${DEPEND}"
 SITEFILE="50${PN}-gentoo.el"
 TEXMF="/usr/share/texmf-site"
 
-src_compile() {
-	local advi=false xdvi=false gv=false
+src_configure() {
+	local advi xdvi gv
 	use advi && advi=/usr/bin/advi
 	use xdvi && xdvi=/usr/bin/xdvi
 	use gv && gv=/usr/bin/gv
 
-	if ! use advi && ! use xdvi && ! use gv; then
+	if [[ -z ${advi}${xdvi}${gv} ]]; then
 		ewarn "No previewer defined (USE=\"-advi -xdvi -gv\"), enabling advi"
 		advi=/usr/bin/advi
 	fi
 
 	# hand-crafted configure, econf doesn't work
-	./configure -prefix /usr \
+	./configure \
+		-prefix /usr \
 		-emacsdir "${SITELISP}/${PN}" \
 		-latexdir "${TEXMF}/tex/latex/${PN}" \
 		-docdir /usr/share/doc/${PF} \
-		-advi ${advi} -xdvi ${xdvi} -gv ${gv} \
-		-emacs emacs -xemacs "" -elc \
+		-initex "pdfetex -ini" \
+		-advi ${advi:-false} \
+		-xdvi ${xdvi:-false} \
+		-gv ${gv:-false} \
+		-emacs emacs \
+		-xemacs "" \
+		-elc \
 		|| die "configure failed"
+
 	# disable XEmacs support (not completely possible in configure)
 	sed -i -e "/^XEMACSDIR/s/=.*/=/" Makefile.config || die
+}
 
+src_compile() {
 	# config.force is needed, otherwise checkconfig will try to call xdvi etc
-	emake config.force || die
-	emake all || die "emake failed"
+	emake config.force
+	emake all
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed"
-	rm -f "${D}"/usr/share/doc/${PF}/{COPYING,GPL}
+	emake DESTDIR="${D}" install
+	rm -f "${ED}"/usr/share/doc/${PF}/{COPYING,GPL}
 
 	elisp-site-file-install "${FILESDIR}/${SITEFILE}" || die
-	dodoc CHANGES || die "dodoc failed"
+	dodoc CHANGES
 
 	if use doc; then
-		dodoc doc/whizzytex.{ps,pdf} || die "dodoc failed"
+		dodoc doc/whizzytex.{ps,pdf}
 	fi
 
 	if use examples; then
 		insinto /usr/share/doc/${PF}
-		doins -r examples || die "doins failed"
+		doins -r examples
 	fi
-
-	prepalldocs
 }
