@@ -1,6 +1,15 @@
 # ChangeLog for app-emacs/whizzytex
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*whizzytex-1.3.2 (06 Oct 2012)
+
+  06 Oct 2012; Ulrich Müller <ulm@gentoo.org> -whizzytex-1.3.1.ebuild,
+  +whizzytex-1.3.2.ebuild:
+  Version bump. Pass -initex option to configure to make the package work with
+  TeX Live 2012. Ebuild refurbished and bumped to EAPI 4. Remove old.
+
+*whizzytex-1.3.1 (06 Dec 2008)
 
   06 Dec 2008; Ulrich Mueller <ulm@gentoo.org> +files/50whizzytex-gentoo.el,
   +metadata.xml, +whizzytex-1.3.1.ebuild:
